# motion-segmentation

./: CMakeLists.txt  MotionSegmentation.cpp  MotionSegmentation.h  README.md  defParameters.h  flow2txt.m  optical_flow_energy_test.m  resizeFlow.m  resizeTools.m  test.cpp  u_epic_sintel.txt  u_epic_sintel_back.txt  v_epic_sintel.txt  v_epic_sintel_back.txt
full_data/: v_epic_sintel.txt
